--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-#welcome.message: Hello Mkyong
+# Database
+db.driver: com.mysql.jdbc.Driver
+db.url: jdbc:mysql://localhost:3306/seosprint?autoReconnect=true&useSSL=false
+db.username: root
+db.password: root
 
-#server.contextPath=/mkyong
-
-#spring.data.mongodb.database=springDemo
+# Hibernate
+hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: update
+entitymanager.packagesToScan: com
