--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
         <!-- marked the embedded servlet container as provided !!!!!!!!!!!!!!!!!!    IMPORTANT   !!!!!!!!!!!!!!!!!!!!-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
