--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com
+
+#HTTPS in Spring Boot
+server.port: 8443
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: scurto
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
