--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
@@ -49,6 +53,15 @@
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.groovy</groupId>-->
+            <!--<artifactId>groovy-all</artifactId>-->
+            <!--<version>2.4.13</version>-->
+        <!--</dependency>-->
+
         <!-- marked the embedded servlet container as provided !!!!!!!!!!!!!!!!!!    IMPORTANT   !!!!!!!!!!!!!!!!!!!!-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
