--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,20 @@ server.ssl.key-store: keystore.p12
 server.ssl.key-store-password: scurto
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
+
+
+#ActiveMQ config-1
+#spring.activemq.in-memory=true
+#spring.activemq.pool.enabled=false
+#activemq.broker-url=tcp://localhost:61616
+
+
+#jsa.activemq.broker.url=tcp://localhost:61616
+#jsa.activemq.borker.username=admin
+#jsa.activemq.borker.password=admin
+#jsa.activemq.queue=jsa-queue
+
+#ActiveMQ config-2
+#spring.activemq.in-memory=false
+#spring.activemq.pool.enabled=false
+#activemq.broker-url=tcp://localhost:61616
